also take interface pickler-factories into account when resolving a pickler (fixes https://github.com/mbraceproject/FsPickler/issues/80)

--- a/tests/FsPickler.Tests/FsPickler.Tests.fsproj
+++ b/tests/FsPickler.Tests/FsPickler.Tests.fsproj
@@ -97,6 +97,7 @@
     <Compile Include="FsPicklerManager.fs" />
     <Compile Include="TestTypes.fs" />
     <Compile Include="GenericTests.fs" />
+    <Compile Include="InterfaceTests.fs" />
     <Compile Include="SerializerTests.fs" />
     <Compile Include="InMemoryTests.fs" />
     <Compile Include="AppDomainTests.fs" />
