--- a/src/FsPickler/paket.template
+++ b/src/FsPickler/paket.template
@@ -22,6 +22,8 @@ iconurl https://avatars0.githubusercontent.com/u/9674757
 include-pdbs true
 tags
     F#, fsharp, serializer, pickler, binary, json, xml
+excludeddependencies
+    FSharp.Compiler.Tools
 frameworkAssemblies
     System.Runtime.Serialization
     System.Xml
